# this sub-flow exists to work around an ios issue where the text field is not
# fully erased.  The tap into the input field hits the middle, and clears all
# text to the left.  If there's more to the right, it slides left, and thus we
# repeat this step.  https://maestro.mobile.dev/api-reference/commands/erasetext
appId: sia.storage.dev
---
- copyTextFrom:
    id: ${id}
- repeat:
    times: 4
    commands:
      - tapOn:
          id: ${id}
      - eraseText
      - copyTextFrom:
          id: ${id}
